[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-lib = "1.0.3"
indicatif = "0.17.9"
miette = "7.4.0"
nom = "7.1.3"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
maplit = "1.0"
fraction = "0.15.3"
strum_macros = "0.26.4"
strum = "0.26.3"

anyhow = "1.0"
scan-rules = { version = "0.2.0", features = ["regex"] }
itertools = "0.13.0"
cached = "0.54.0"
rayon = "1.10.0"
num-bigint = "0.4.6"
